--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="features">
-            <li>
+            <li class="features__item">
               <div class="features__icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#icon-antenna"></use>
@@ -144,7 +144,7 @@
                 формування позиції.
               </p>
             </li>
-            <li>
+            <li class="features__item">
               <div class="features__icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#icon-clock"></use>
@@ -156,7 +156,7 @@
                 тягне у себе.
               </p>
             </li>
-            <li>
+            <li class="features__item">
               <div class="features__icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#icon-diagram"></use>
@@ -167,7 +167,7 @@
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
+            <li class="features__item">
               <div class="features__icon">
                 <svg width="70" height="70">
                   <use href="./images/icons.svg#icon-astronaut"></use>
