--- a/index.html
+++ b/index.html
@@ -21,68 +21,11 @@
 
       <!--Navigation's site-->
       <div class="container nav">
+          <!-- Navigation for tablet and desktop -->
+        <nav class="navigation">
         <a href="./index.html" class="logo logo__header"
           ><span class="logo__letters">Web</span>Studio</a
         >
-
-        <!-- Mobile menu button -->
-       <button
-          type="button"
-          class="menu-btn"
-          aria-expanded="false"
-          aria-controls=""
-          data-menu-button
-        >
-          <svg
-            width="40"
-            height="40"
-            aria-label="переключатель мобильного меню"
-          >
-            <use
-              class="menu-btn__open"
-              href="./images/icons.svg#icon-menu"
-            ></use>
-            <use
-              class="menu-btn__close"
-              href="./images/icons.svg#icon-cross"
-            ></use>
-          </svg>
-        </button>
-
-        <!-- Mobile menu container -->
-        <div class="menu-container is-open" id="menu-container" data-menu>
-            <ul class="menu-nav">
-            <li class="menu-nav__item">
-              <a href="./index.html" class="menu-nav__link menu-nav__link--current">Студія</a>
-            </li>
-            <li class="menu-nav__item">
-              <a href="./portfolio.html" class="menu-nav__link">Портфоліо</a>
-            </li>
-            <li class="menu-nav__item"><a href="" class="menu-nav__link">Контакти</a></li>
-          </ul>
-           <ul class="menu-contacts">
-          <li class="menu-contacts__item">
-            <a href="tel:+380961111111" class="menu-contacts__phone"
-              >+38 096 111 11 11</a
-            >
-          </li>
-          <li class="menu-contacts__item">
-            <a href="mailto:info@devstudio.com" class="menu-contacts__email"
-              >
-              info@devstudio.com</a
-            >
-          </li>
-        </ul>
-        <ul class="social-nav">
-          <li class="social-nav__item"><a href="" class="social-nav__link">Instagram</a></li>
-          <li class="social-nav__item"><a href="" class="social-nav__link">Twitter</a></li>
-          <li class="social-nav__item"><a href="" class="social-nav__link">Facebook</a></li>
-          <li class="social-nav__item"><a href="" class="social-nav__link">Linkedin</a></li>
-        </ul>
-          </div>
-
-          <!-- Navigation for tablet and desktop -->
-        <nav>
           <ul class="site-nav">
             <li class="site-nav__item">
               <a href="./index.html" class="site-nav__link site-nav__link--current">Студія</a>
@@ -112,6 +55,72 @@
             >
           </li>
         </ul>
+
+                <!-- Mobile menu button -->
+       <button
+          type="button"
+          class="menu-btn js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg
+            width="40"
+            height="40"
+            aria-label="переключатель мобильного меню"
+          >
+            <use
+              class="menu-btn__open"
+              href="./images/icons.svg#icon-menu"
+            ></use>
+          </svg>
+        </button>
+
+        <!-- Mobile menu container -->
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <button
+          type="button"
+          class="menu-btn js-close-menu"
+        >
+          <svg
+            width="40"
+            height="40"
+            aria-label="переключатель мобильного меню"
+          >
+            <use
+              class="menu-btn__close"
+              href="./images/icons.svg#icon-cross"
+            ></use>
+          </svg>
+        </button>
+            <ul class="menu-nav">
+            <li class="menu-nav__item">
+              <a href="./index.html" class="menu-nav__link menu-nav__link--current">Студія</a>
+            </li>
+            <li class="menu-nav__item">
+              <a href="./portfolio.html" class="menu-nav__link">Портфоліо</a>
+            </li>
+            <li class="menu-nav__item"><a href="" class="menu-nav__link">Контакти</a></li>
+          </ul>
+           <ul class="menu-contacts">
+          <li class="menu-contacts__item">
+            <a href="tel:+380961111111" class="menu-contacts__phone"
+              >+38 096 111 11 11</a
+            >
+          </li>
+          <li class="menu-contacts__item">
+            <a href="mailto:info@devstudio.com" class="menu-contacts__email"
+              >
+              info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="social-nav">
+          <li class="social-nav__item"><a href="" class="social-nav__link">Instagram</a></li>
+          <li class="social-nav__item"><a href="" class="social-nav__link">Twitter</a></li>
+          <li class="social-nav__item"><a href="" class="social-nav__link">Facebook</a></li>
+          <li class="social-nav__item"><a href="" class="social-nav__link">Linkedin</a></li>
+        </ul>
+          </div>
 
       </div>     
     </header>
@@ -232,10 +241,18 @@
           <ul class="team">
             <li class="team__list">
               <img
-                src="./images/images-index/img-1.jpg"
-                alt="Чоловік"
-                width="270"
-                height="260"
+                 srcset="
+                  ./images/mobile/team1-mobile.jpg 270w,
+                  ./images/mobile/team1-mobile@2x.jpg 354w,
+                  ./images/tablet/team1-tablet.jpg 450w,
+                  ./images/tablet/team1-tabler@2x.jpg 540w,
+                  ./images/desktop/t1-desk.jpg 708w,
+                  ./images/desktop/t1-desk@2x.jpg 900w
+                "
+                src="./images/mobile/team1-mobile.jpg"
+                alt="чоловік"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                width="450"
               />
               <div class="team__border">
                 <h3 class="team__name">Ігор Дем'яненко</h3>
@@ -274,10 +291,19 @@
             </li>
             <li class="team__list">
               <img
-                src="./images/images-index/img-2.jpg"
+              srcset="
+                  ./images/mobile/team2-mobile.jpg 270w,
+                  ./images/mobile/team2-mobile@2x.jpg 354w,
+                  ./images/tablet/team2-tablet.jpg 450w,
+                  ./images/tablet/team2-tabler@2x.jpg 540w,
+                  ./images/desktop/t2-desk.jpg 708w,
+                  ./images/desktop/t2-desk@2x.jpg 900w
+                "
+                src="./images/mobile/team2-mobile.jpg"
                 alt="Жінка"
-                width="270"
-                height="260"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                width="450"
+              
               />
               <div class="team__border">
                 <h3 class="team__name">Ольга Рєпіна</h3>
@@ -316,10 +342,18 @@
             </li>
             <li class="team__list">
               <img
-                src="./images/images-index/img-3.jpg"
-                alt="Чоловік"
-                width="270"
-                height="260"
+                 srcset="
+                  ./images/mobile/team3-mobile.jpg 270w,
+                  ./images/mobile/team3-mobile@2x.jpg 354w,
+                  ./images/tablet/team3-tablet.jpg 450w,
+                  ./images/tablet/team3-tabler@2x.jpg 540w,
+                  ./images/desktop/t3-desk.jpg 708w,
+                  ./images/desktop/t3-desk@2x.jpg 900w
+                "
+                src="./images/mobile/team3-mobile.jpg"
+                alt="чоловік"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                width="450"
               />
               <div class="team__border">
                 <h3 class="team__name">Микола Тарасов</h3>
@@ -359,10 +393,18 @@
             </li>
             <li class="team__list">
               <img
-                src="./images/images-index/img-4.jpg"
-                alt="Чоловік"
-                width="270"
-                height="260"
+                 srcset="
+                  ./images/mobile/team4-mobile.jpg 270w,
+                  ./images/mobile/team4-mobile@2x.jpg 354w,
+                  ./images/tablet/team4-tablet.jpg 450w,
+                  ./images/tablet/team4-tabler@2x.jpg 540w,
+                  ./images/desktop/t4-desk.jpg 708w,
+                  ./images/desktop/t4-desk@2x.jpg 900w
+                "
+                src="./images/mobile/team4-mobile.jpg"
+                alt="чоловік"
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                width="450"
               />
               <div class="team__border">
                 <h3 class="team__name">Михайло Єрмаков</h3>
@@ -409,42 +451,42 @@
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="clients">
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href=""
                 ><svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients__item">
               <a class="clients__link" href="">
                 <svg width="106" height="60">
                   <use href="./images/icons.svg#icon-client6"></use>
@@ -459,7 +501,7 @@
     <!-- Adress -->
     <footer class="footer">
       <div class="container footer__general">
-        <div>
+        <div class="footer__contacts--mobile">
           <a href="./index.html" class="logo logo__footer"
             ><span class="logo__letters">Web</span>Studio</a
           >
@@ -608,6 +650,12 @@
 
     <!-- Script for modal window -->
     <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+        <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
