--- a/portfolio.html
+++ b/portfolio.html
@@ -180,7 +180,7 @@
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <div class="portfolio__border">
+                <div class="portfolio__border grow-card">
                   <h2 class="portfolio__title">Технокряк</h2>
                   <p class="portfolio__label">Веб-сайт</p>
                 </div>
