changed header and hero

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="menu-container js-menu-container" id="mobile-menu">
           <button
           type="button"
-          class="menu-btn js-close-menu"
+          class="menu-btn js-close-menu menu-toggle"
         >
           <svg
             width="40"
@@ -132,10 +132,12 @@
 
       <!--Hero-->
       <section class="hero">
-        <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
+        <div class="container">
+         <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
         <button data-modal-open type="button" class="hero__btn">
           Замовити послугу
-        </button>
+        </button> 
+        </div>
       </section>
 
       <!--Features-->
