tested work of git

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
         </div>
       </section>
 
-      <!-- Clients -->
+      <!-- Our Clients -->
       <section class="section">
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
@@ -566,7 +566,6 @@
         </div>
 
         <!-- Subscribe form -->
-
         <div class="subscribe">
           <form>
             <label class="subscribe__label">
