added class menu-toggle to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
         <div class="menu-container js-menu-container" id="mobile-menu">
           <button
           type="button"
-          class="menu-btn menu-btn__cross js-close-menu"
+          class="menu-btn menu-toggle js-close-menu"
         >
           <svg
             width="40"
