added img pixel to desktop version

--- a/index.html
+++ b/index.html
@@ -205,10 +205,12 @@
           <ul class="our-work">
             <li class="our-work__img">
               <img
-                src="./images/images-index/box-1.jpg"
+              srcset="./images/desktop/w1.jpg 370w, ./images/desktop/w1@2x.jpg 740w"
+                src="./images/desktop/w1.jpg"
                 alt="Людина працює за ноутбуком"
                 width="370"
                 height="294"
+                sizes="370"
               />
               <div class="our-work__overlay">
                 <p class="our-work__label">десктопні додатки</p>
@@ -216,10 +218,12 @@
             </li>
             <li class="our-work__img">
               <img
-                src="./images/images-index/box-2.jpg"
+              srcset="./images/desktop/w2.jpg 370w, ./images/desktop/w2@2x.jpg 740w"
+                src="./images/desktop/w2.jpg"
                 alt="Людина тримає смартфон"
                 width="370"
                 height="294"
+                sizes="370"
               />
               <div class="our-work__overlay">
                 <p class="our-work__label">мобільні додатки</p>
@@ -227,10 +231,12 @@
             </li>
             <li class="our-work__img">
               <img
-                src="./images/images-index/box-3.jpg"
+              srcset="./images/desktop/w3.jpg 370w, ./images/desktop/w3@2x.jpg 740w"
+                src="./images/desktop/w3.jpg"
                 alt="Людина працює з планшетом"
                 width="370"
                 height="294"
+                sizes="370"
               />
               <div class="our-work__overlay">
                 <p class="our-work__label">дизайнерські рішення</p>
@@ -251,7 +257,7 @@
                   ./images/mobile/team1-mobile.jpg 270w,
                   ./images/mobile/team1-mobile@2x.jpg 354w,
                   ./images/tablet/team1-tablet.jpg 450w,
-                  ./images/tablet/team1-tabler@2x.jpg 540w,
+                  ./images/tablet/team1-tablet@2x.jpg 540w,
                   ./images/desktop/t1-desk.jpg 708w,
                   ./images/desktop/t1-desk@2x.jpg 900w
                 "
@@ -301,7 +307,7 @@
                   ./images/mobile/team2-mobile.jpg 270w,
                   ./images/mobile/team2-mobile@2x.jpg 354w,
                   ./images/tablet/team2-tablet.jpg 450w,
-                  ./images/tablet/team2-tabler@2x.jpg 540w,
+                  ./images/tablet/team2-tablet@2x.jpg 540w,
                   ./images/desktop/t2-desk.jpg 708w,
                   ./images/desktop/t2-desk@2x.jpg 900w
                 "
@@ -352,7 +358,7 @@
                   ./images/mobile/team3-mobile.jpg 270w,
                   ./images/mobile/team3-mobile@2x.jpg 354w,
                   ./images/tablet/team3-tablet.jpg 450w,
-                  ./images/tablet/team3-tabler@2x.jpg 540w,
+                  ./images/tablet/team3-tablet@2x.jpg 540w,
                   ./images/desktop/t3-desk.jpg 708w,
                   ./images/desktop/t3-desk@2x.jpg 900w
                 "
@@ -403,7 +409,7 @@
                   ./images/mobile/team4-mobile.jpg 270w,
                   ./images/mobile/team4-mobile@2x.jpg 354w,
                   ./images/tablet/team4-tablet.jpg 450w,
-                  ./images/tablet/team4-tabler@2x.jpg 540w,
+                  ./images/tablet/team4-tablet@2x.jpg 540w,
                   ./images/desktop/t4-desk.jpg 708w,
                   ./images/desktop/t4-desk@2x.jpg 900w
                 "
