changend :after in mobile menu

--- a/portfolio.html
+++ b/portfolio.html
@@ -96,10 +96,10 @@
         </button>
             <ul class="menu-nav">
             <li class="menu-nav__item">
-              <a href="./index.html" class="menu-nav__link menu-nav__link--current">Студія</a>
+              <a href="./index.html" class="menu-nav__link">Студія</a>
             </li>
             <li class="menu-nav__item">
-              <a href="./portfolio.html" class="menu-nav__link">Портфоліо</a>
+              <a href="./portfolio.html" class="menu-nav__link menu-nav__link--current">Портфоліо</a>
             </li>
             <li class="menu-nav__item"><a href="" class="menu-nav__link">Контакти</a></li>
           </ul>
