--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
@@ -65,6 +65,7 @@
           type="button"
           class="menu-btn js-open-menu"
           aria-expanded="false"
+
           aria-controls="mobile-menu"
         >
           <svg
